serial_interface/examples/cpp/minfo.txt
main.cpp:
/global/u2/t/train471/gpu-atomistic/chimes_calculator/serial_interface/examples/cpp/../../src/serial_chimes_interface.cpp:
/global/u2/t/train471/gpu-atomistic/chimes_calculator/serial_interface/examples/cpp/../../../chimesFF/src/chimesFF.cpp:
"/global/u2/t/train471/gpu-atomistic/chimes_calculator/serial_interface/examples/cpp/../../../chimesFF/src/chimesFF.cpp", line 1025: error: expression must have class type but it has type "int *"
                          chimes_4b_params[tmp_int].push_back(stod(tmp_str_items[9]));
                          ^

1 error detected in the compilation of "/global/u2/t/train471/gpu-atomistic/chimes_calculator/serial_interface/examples/cpp/../../../chimesFF/src/chimesFF.cpp".
